# nenuscanner

./: .gitignore  Makefile  Notes.md  README.md  installer.sh  mediamtx.service  mediamtx.sh  mediamtx.yml  nenuscanner.service  package-lock.json  package.json  prevent-saving.sh  pyproject.toml  tsconfig.json
frontend/: .prettierignore  .prettierrc  index.html  package-lock.json  package.json  prettier.config.js  tsconfig.json  vite.config.ts
frontend/public/: manifest.json  site.webmanifest
frontend/src/: main.tsx  routeTree.gen.ts  styles.css
frontend/src/components/: artifact-card.tsx  component-card.tsx  confirm-action-dialog.tsx  default-content.tsx  initialize-camera-dialog.tsx
frontend/src/hooks/: use-acquisition-run.ts  use-camera-preview.ts  use-minimum-loading-duration.ts
frontend/src/lib/: api-types.ts  camera-settings-utils.ts  (+7 more)
server/: .gitignore  __init__.py  __main__.py  archive.py  backfill_camera_settings_fks.py  calibration.py  camera.py  config.darkroom.py  config.local.py  config.py  configSonyFX3.json  dateutils.py  db.py  fan.py  leds.py  math_utils.py  models_sa.py  poetry.toml  pyproject.toml  sa_db.py  scanner.py  schema.sql  secret.py  turntable.py  utils.py
server/app/: __init__.py  paths.py
server/routes/: __init__.py  acquisition.py  calibration.py  camera.py  leds.py  object.py  object2.py  test.py
server/schemas/: __init__.py  base.py  object2.py
server/seeds/: __init__.py  led_power_values_seed.py  relative_shutter_speed_values_seed.py  shutter_speed_values_seed.py
server/static/: calibration-visualiser.js  calibration-visualiser.js.map  custom.css  three.module.js
server/templates/: base.html  calibrate.html  calibration.html  camera.html  index.html  leds.html  object.html  restart.html  scan.html
ts/: Animation.ts  Calibration.ts  CameraObject.ts  Engine.ts  Led.ts  main.ts
(+205 files in other folders)
