[tool.poetry]
name = "nenuscanner"
version = "0.1.0"
description = "NeNuScanner Flask server"
authors = ["NeNuScanner team"]
readme = "README.md"
packages = [{ include = "server" }]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
waitress = "^3.0.0"
numpy = "^2.0.0"
scipy = "^1.13.0"

gpiozero = "^2.0.1"
gphoto2 = "^2.6.0"
flask-cors = "^6.0.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.11"

[tool.poetry.scripts]
nenuscanner = "server.__main__:main"
dev = "server.dev:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors (settings from FastAPI, thanks, @tiangolo!)
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []